# nr-cancel-managed-accounts-old

./: .gitignore  README.md  pyproject.toml
cancel_managed_accounts/: main.py
cancel_managed_accounts/api/: __init__.py  nerdgraph.py  rate_limiter.py
cancel_managed_accounts/api/queries/: __init__.py  cancel_account.py  get_account_share.py  get_canceled_accounts.py  revoke_account_share.py
cancel_managed_accounts/data/: csv_handler.py
cancel_managed_accounts/logs/: README.md
